# design-os

./: .gitignore  AGENTS.md  LICENSE  README.md  gate.py  pyproject.toml  requirements.txt  waivers.yaml  watchlist.yaml
critique/: rubric_prompt.py  runner.py
dashboard/: build.py  schema.sql
deploy/: README.md  design-audit.service  design-audit.timer
design_os/: gate.py  harness.py
design_os/_vendor/approval_inbox/: __init__.py  server.py  store.py
design_os/_vendor/ux_qa_harness/: qa.py  record.py  vision.py
design_os/_vendor/ux_qa_harness/lib/: a11y.py  auth.py  env.py  spec.py  visual.py
design_os/canon/: apple-hig.md  brand-identity.md  critique-process.md  information-design.md  interface-craft.md  motion-design.md  rams-functionalism.md  refactoring-ui.md  saas-quality-culture.md  swiss-grid.md  system-governance.md  typography-canon.md
design_os/critique/: lenses.py  repair_ops.py  rubric_prompt.py  runner.py
design_os/lint/: __init__.py  __main__.py  bindings.yaml  checks.py  engine.py  extract.py
design_os/orchestrator/: detect.py  live.py  run.py  signals.py
design_os/process/: __init__.py  __main__.py  protocol.py
design_os/rules/: __init__.py  catalog.yaml  loader.py
docs/superpowers/plans/: 2026-07-02-design-os-v1.md
docs/superpowers/specs/: 2026-07-02-design-os-design.md
orchestrator/: detect.py  run.py
scripts/: setup_siblings.py  verify_deps.py
sibling-patches/approval-inbox/: pyproject.toml
sibling-patches/cmo-daily-dashboard/: pyproject.toml
sibling-patches/ux-qa-harness/: pyproject.toml
sibling-patches/visual-factory-kit/: pyproject.toml
tests/: test_cli_smoke.py  test_gate.py  test_setup_siblings.py  test_verify_deps.py
tests/critique/: test_lenses.py  test_repair_ops.py  test_rubric_prompt.py  test_runner.py
tests/dashboard/: test_build.py
tests/fixtures/: vision-manifest.json  watchlist.yaml
tests/fixtures/kai-taste/: SKILL.md  pillar-rubrics.md
tests/lint/: test_checks.py  test_engine.py
tests/orchestrator/: test_detect.py  test_live.py  test_run.py  test_run_harness_gate.py  test_signals.py
tests/process/: test_protocol.py
tests/rules/: test_loader.py
