[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "approval-inbox"
version = "0.1.0"
description = "Approval inbox for autonomous loops"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["approval_inbox"]
