[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "cmo-daily-dashboard"
version = "0.1.0"
description = "CMO daily dashboard schema and utilities"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["cmo_dashboard"]
