[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "ux-qa-harness"
version = "0.1.0"
description = "UX QA harness for rendering and critiquing design"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["lib"]
