[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-factory-kit"
version = "0.1.0"
description = "Brand token and visual factory kit"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["visual_factory"]
